--- a/package.json
+++ b/package.json
@@ -12,15 +12,12 @@
 	"license": "ISC",
 	"dependencies": {
 		"body-parser": "^1.19.0",
-		"cloudinary": "^2.2.0",
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"mongodb": "^3.6.8",
-		"mongoose": "^8.3.4",
-		"multer": "^1.4.5-lts.1",
-		"multer-storage-cloudinary": "^4.0.0"
+		"mongoose": "^8.3.4"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.7"
