--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"mongodb": "^3.6.8",
-		"mongoose": "^8.3.4"
+		"mongoose": "^8.3.4",
+		"cloudinary": "^1.41.3",
+		"multer-storage-cloudinary": "^4.0.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.7"
